# spp

./: Makefile.am  README  configure.ac  tests.sh
doc/: Makefile.am  make  man_tester  spp.tex  spp_diagram_modulow.xmi  tests.txt
src/lib/: Makefile.am  db_io.c  db_io.h  db_types.h  define.h  spp.c  spp.h  util.c  util.h
